ASMA-7144 files post journal quick share column is fixed on mobile and should be unpinned (#11)
* feat: Add support for fixed right columns in table

- Add fixed right cell styles and logic to StyledTable.module.scss
- Update TableRow, TableHeader, TableHeaderCell to handle fixedRight columns
- Adjust action column and drag logic for fixed right columns

* chore: Trigger pipeline

ASMA-7144

--- a/src/components/StyledTable.module.scss
+++ b/src/components/StyledTable.module.scss
@@ -286,6 +286,28 @@
                 }
             }
         }
+
+        .fixed-right-cell {
+            height: 100%;
+
+            @media (min-width: 743px) {
+                position: sticky;
+                z-index: 1;
+
+                box-shadow: var(--action-cell-shadow);
+                &.single-selection {
+                    box-shadow:
+                        inset 0 2px 0 0 var(--colors-gama-400),
+                        inset 0 -2px 0 0 var(--colors-gama-400);
+                }
+            }
+        }
+
+        .shadowed-right {
+            @media (min-width: 743px) {
+                box-shadow: var(--action-cell-shadow);
+            }
+        }
     }
 
     .t-row.is-loading {
@@ -299,6 +321,10 @@
     }
 
     .fixed-cell-default-background {
+        background-color: white;
+    }
+
+    .fixed-right-cell-default-background {
         background-color: white;
     }
 
@@ -387,6 +413,14 @@
                     z-index: 160;
 
                     box-shadow: var(--fixed-cell-shadow);
+                }
+
+                &.t-cell__fixed-right {
+                    position: sticky;
+                    background-color: var(--colors-gray-10);
+                    z-index: 160;
+
+                    box-shadow: var(--action-cell-shadow);
                 }
             }
         }
